--- a/project/templates/layouts/base.html
+++ b/project/templates/layouts/base.html
@@ -18,7 +18,7 @@
     <body class="rs-backend"> 
         <div id="rs-backend-navigation">
             <a id="rs-backend-logo" href="{{ url_for('reisesteine.index') }}">
-                <img src="{{ url_for('static', filename='img/logo.svg') }}"/> {{_('Reisesteine')}}
+                <img src="{{ url_for('static', filename='img/logo.svg') }}"/>
             </a>
             <span id="rs-backend-lang">
                 <a id="rs-small-de" href="{{ url_for(request.endpoint, lang_code='de') }}">de</a> / 
