--- a/project/blueprints/reisesteine/templates/reisesteine/mitmachen.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/mitmachen.html
@@ -11,7 +11,7 @@
 
 {% block body %}
 
-<div class="container mt-3 pt-3">
+<div class="container mt-3 pt-3 rs-mitmachen">
     <form method="POST" enctype="multipart/form-data">
         {{ form.hidden_tag() }}
         <div class="row">
@@ -25,7 +25,7 @@
                 </p>
             </div>
         </div>
-        <div class="row mt-5">
+        <div class="row mt-3">
             <div class="col-md-6">
                 <h2>{{_('Personalien')}}</h2>
                 <small class="form-text text-muted mb-3">
