fix: close button fundort

--- a/project/blueprints/reisesteine/templates/reisesteine/about.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/about.html
@@ -24,7 +24,7 @@
     #rs-small-navigation span {
         display: block!important;
     }
-    .rs-close {
+    #rs-closeAll {
         display: block!important;
     }
     .overlay path {
@@ -96,7 +96,7 @@
         #rs-small-navigation>* {
             transform: translate(-30px, -30px);
         }
-        .rs-close {
+        #rs-closeAll {
             top: 15px!important;
         }
         .rs-about-logos {
