--- a/project/templates/components/navigation.html
+++ b/project/templates/components/navigation.html
@@ -1,4 +1,7 @@
-<svg class="rs-close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48">
+<svg id="rs-closeAll" class="rs-close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48">
+    <path d="M38 12.83l-2.83-2.83-11.17 11.17-11.17-11.17-2.83 2.83 11.17 11.17-11.17 11.17 2.83 2.83 11.17-11.17 11.17 11.17 2.83-2.83-11.17-11.17z"/>
+</svg>
+<svg id="rs-closeFundort" class="rs-close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48">
     <path d="M38 12.83l-2.83-2.83-11.17 11.17-11.17-11.17-2.83 2.83 11.17 11.17-11.17 11.17 2.83 2.83 11.17-11.17 11.17 11.17 2.83-2.83-11.17-11.17z"/>
 </svg>
 
