fix: add alle to nav

--- a/project/templates/components/navigation.html
+++ b/project/templates/components/navigation.html
@@ -34,10 +34,10 @@
         <span class="rs-title">{{_('Reisesteine')}}</span>
 
         <div class="rs-nav-indexpages">
-            <a id="rs-nav-steine" href="#">{{_('Steine')}}</a>
-            <a id="rs-nav-geschichten" href="#">{{_('Geschichten')}}</a>
-            <a id="rs-nav-fundorte" href="#">{{_('Fundorte')}}</a>
-            <a id="rs-nav-geologie" href="#">{{_('Geologie')}}</a>
+            <a id="rs-nav-steine" href="#"><small>{{_('Alle')}}</small> {{_('Steine')}}</a>
+            <a id="rs-nav-geschichten" href="#"><small>{{_('Alle')}}</small> {{_('Geschichten')}}</a>
+            <a id="rs-nav-fundorte" href="#"><small>{{_('Alle')}}</small> {{_('Fundorte')}}</a>
+            <a id="rs-nav-geologie" href="#"><small>{{_('Alle')}}</small> {{_('Geologie')}}</a>
         </div>
 
         <div class="rs-nav-impressum">
